# simulator

./: .gitignore  .gitlab-ci.yml  Cargo.toml
src/: application.rs  cli.rs  featuredb.rs  main.rs  net.rs  raycast.rs  trackball.rs  ui.rs
src/gfx/: camera.rs  geometry.rs  mesh.rs  mod.rs  renderer.rs  texture.rs
src/gfx/shader/: basic.wgsl  feature.rs  feature.wgsl  mod.rs
src/scene/: mod.rs
