[package]
name = "simulator"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
roots = "0.0.7"
env_logger = "0.9"
log = "0.4"
wgpu = "0.10"
bytemuck = { version = "*", features = ["derive"] }
rusqlite = { version = "0.25.3", features = ["bundled"] }
async-tungstenite = { version = "0.15.0", features = ["async-std-runtime"] }
tungstenite = "*"
async-std = { version = "*", features = ["attributes"] }
futures = "*"
